# flexible_assembly

robot/abb_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
robot/abb_ws/devel/lib/abb_gazebo/: complet  grasp_pose  grasp_shoot  image  nuts  poseestimation  sub
robot/abb_ws/devel/lib/abb_motion_test/: motion_planning_api_tutorial
robot/abb_ws/devel/lib/pkgconfig/: abb_gazebo.pc  abb_irb2400_moveit_config.pc  abb_irb2400_moveit_config_2.pc  abb_irb2400_moveit_config_3.pc  abb_irb2400_moveit_plugins.pc  abb_irb2400_support.pc  abb_motion_test.pc  abb_resources.pc  robotiq_85_description.pc
robot/abb_ws/devel/share/abb_gazebo/cmake/: abb_gazeboConfig.cmake
robot/abb_ws/devel/share/abb_irb2400_moveit_config/cmake/: abb_irb2400_moveit_configConfig.cmake
robot/abb_ws/devel/share/abb_irb2400_moveit_config_2/cmake/: abb_irb2400_moveit_config_2Config.cmake
robot/abb_ws/src/abb_gazebo/: CMakeLists.txt
robot/abb_ws/src/abb_gazebo/include/: icosahedron.h
robot/abb_ws/src/abb_gazebo/launch/: abb_world.launch  abb_world_kinect.launch  abb_world_stereo.launch  case.launch  grasp_pose_image.launch  mynode.launch  poseestimation_node.launch  poseestimation_pre.launch  rviz.launch
robot/abb_ws/src/abb_gazebo/src/: a.cpp  add_remove_joint_plugin.cpp  complet.cpp  grasp_pose.cpp  grasp_shoot.cpp  icosahedron.cpp  image.cpp  inverse_calculate&call_service.cpp  nuts.cpp  setJoint.cpp  sub.cpp
robot/abb_ws/src/abb_gazebo/worlds/: abb.world
robot/abb_ws/src/abb_gazebo/worlds/media/: case.stl  case.urdf  nut.stl  nut.urdf  screw m18x80.stl  screw.stl
robot/abb_ws/src/abb_irb2400_moveit_config/launch/: moveit.rviz
robot/abb_ws/src/abb_irb2400_moveit_config_2/: .setup_assistant  CMakeLists.txt  package.xml
robot/abb_ws/src/abb_irb2400_moveit_config_2/config/: abb_irb2400.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml
robot/abb_ws/src/abb_irb2400_moveit_config_2/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robot/abb_ws/src/abb_irb2400_moveit_config_3/: .setup_assistant  CMakeLists.txt
robot/abb_ws/src/abb_irb2400_moveit_config_3/config/: abb_irb2400.srdf  fake_controllers.yaml  joint_limits.yaml
robot/abb_ws/src/abb_irb2400_moveit_config_3/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robot/abb_ws/src/abb_irb2400_support/: CMakeCache.txt
robot/abb_ws/src/abb_irb2400_support/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
robot/abb_ws/src/abb_irb2400_support/devel/: .catkin  .rosinstall  setup.sh
robot/abb_ws/src/abb_irb2400_support/launch/: planning_context.launch
robot/abb_ws/src/abb_irb2400_support/urdf/: abb.gazebo  camera_kinect.xacro  camera_kinect_macro.xacro  camera_stereo.xacro  camera_stereo_macro.xacro  irb2400.urdf  irb2400_macro.xacro  irb2400_macro_backup.xacro  kinect.gazebo  stereo.gazebo
robot/abb_ws/src/abb_motion_test/: CMakeLists.txt
robot/abb_ws/src/abb_motion_test/launch/: motion_planning_api_tutorial.launch
robot/abb_ws/src/abb_motion_test/src/: motion_planning_api_tutorial.cpp
robot/abb_ws/src/pose_estimation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  normal.csv  normalvis.cpp  sober.xml  template generate Q  template_generate.cpp  template_match  template_match.cpp  templatelib.cpp  test  test.cpp
robot/abb_ws/src/pose_estimation/.ipynb_checkpoints/: 3Dplot-checkpoint.ipynb
robot/abb_ws/src/robotiq_85_description/urdf/: gripper.gazebo  robotiq_85_gripper.urdf.xacro
(+10 files in other folders)
